code/force-app/main/default/objects/Law_Risk_Event__c/Law_Risk_Event__c.object-meta.xml
<CustomObject>
    <label>法源風險事件</label>
    <nameField>
        <label>案由</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>