code/force-app/main/default/objects/Law_Risk_Event__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客戶</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>法源風險事件</relationshipLabel>
    <relationshipName>Law_Risk_Event</relationshipName>
    <type>Lookup</type>
</CustomField>