code/force-app/main/default/objects/Law_Risk_Event__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>案件類別</label>
    <length>100</length>
    <type>Text</type>
</CustomField>