code/force-app/main/default/objects/Law_Risk_Event__c/fields/Court__c.field-meta.xml
<CustomField>
    <fullName>Court__c</fullName>
    <label>法院</label>
    <length>8</length>
    <type>Text</type>
</CustomField>