code/force-app/main/default/objects/Law_Risk_Event__c/fields/Full_Text_Link__c.field-meta.xml
<CustomField>
    <fullName>Full_Text_Link__c</fullName>
    <label>本文連結</label>
    <type>Url</type>
</CustomField>