code/force-app/main/default/objects/Law_Risk_Event__c/fields/Judgment_Date__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Date__c</fullName>
    <label>裁判日期</label>
    <type>Date</type>
</CustomField>