code/force-app/main/default/objects/Law_Risk_Event__c/fields/Judgment_Type__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Type__c</fullName>
    <label>裁判類別</label>
    <length>8</length>
    <type>Text</type>
</CustomField>