code/force-app/main/default/objects/Law_Risk_Event__c/fields/Law_Risk_Event_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Law_Risk_Event_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>法源風險事件外鍵</label>
    <length>200</length>
    <type>Text</type>
</CustomField>