code/force-app/main/default/objects/Law_Risk_Event__c/fields/Litigant__c.field-meta.xml
<CustomField>
    <fullName>Litigant__c</fullName>
    <label>當事人</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>