code/force-app/main/default/objects/Law_Risk_Event__c/fields/Main_Text__c.field-meta.xml
<CustomField>
    <fullName>Main_Text__c</fullName>
    <label>主文</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>