code/force-app/main/default/objects/Law_Risk_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Judgment_Date__c</columns>
    <columns>Court__c</columns>
    <columns>Judgment_Type__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Litigant__c</columns>
    <columns>Main_Text__c</columns>
    <columns>Full_Text_Link__c</columns>
    <columns>Account_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>